[package]
name = "kspconfigtool"
version = "0.1.0"
authors = ["Lamont Granquist <lamont.granquist@pm.me>"]
description = """
KSP1 ConfigNode parser and block removal tool
"""
documentation = "https://github.com/lamont-granquist/kspconfigtool"
homepage = "https://github.com/lamont-granquist/kspconfigtool"
repository = "https://github.com/lamont-granquist/kspconfigtool"
readme = "README.md"
keywords = ["kerbal", "confignode", "ksp"]
categories = ["command-line-utilities", "text-processing"]
license = "CC0 OR MIT OR GPL-2.0-or-later"
edition = "2021"
rust-version = "1.68.2"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
clap =  { version = "4.0", features = ["derive"] }
diff = "0.1"
string-builder = "0.2"
